fixed gap

--- a/website/webstyle.css
+++ b/website/webstyle.css
@@ -5,7 +5,6 @@ body{
   width: 100%;
   display: grid;
   place-items: start;
-  gap: 50px;
 }
 
 div{
